# factor_mining

./: .env.example  .gitIgnore  AGENTS.md  FRONTEND_STATUS.md  README.md  SYSTEM_V2_GUIDE.md  USAGE_GUIDE.md  analyze_sharpe_factors.py  backtest_analyze.py  backtest_cli.py  batch_sharpe_optimization.py  check_return_calculation.py  config.example.yaml  config.json  config.yaml  create_test_data.py  debug_align.py  debug_joinquant_scores.py  debug_processor.py  debug_strategy_params.py  demo_backtest_analyzer.py  diagnostic_log.json  download_data.py  download_etf_data.py  etf_momentum_joinquant_backtest.yaml  etf_rotation_simple.yaml  factor_results_viewer.py  ib_data_maintenance.py  long_test_result.json  patch_metadata.py  pyproject.toml  requirements.txt  test_api_response.py  test_benchmark_fix.py  test_final_fix.py  test_fix.py  test_fix_verification.py  test_long_etf_momentum.py  test_momentum_calculation.py  test_total_return_fix.py  (+6 more)
docs/: MIGRATION_TO_UNIFIED_ENGINE.md  data_flow_architecture_design.md  event_system_and_state_machine_design.md  gap_analysis_with_open_source_systems.md  migration_roadmap.md  multi_timeframe_guide.md  strategy_execution_engine_design.md  unified_event_driven_architecture.md  回测系统使用说明.md  新增策略开发指南.md  策略回测CLI使用指南.md  策略回测Web界面使用指南.md  策略系统使用指南.md  聚宽ETF轮动策略转换说明.md
examples/: diagnose_strategy.py  download_daily_data.py  etf_backtest_ib.py  etf_backtest_mock.py  etf_config.py  etf_momentum_backtest.py  etf_momentum_joinquant_example.py  factor_evaluation_demo.py  freqtrade_backtest_demo.py  joinquant_etf_backtest.py  optimization_and_event_demo.py  run_strategy_from_yaml.py  spy_factor_ic_4m.py  strategy_backtest_example.py  strategy_template_demo.py  (+4 more)
(+173 files in other folders)
